improve test